2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: set off_t variable to 0 before sscanf.
	* server-src/planner.c: set off_t variable to 0 before sscanf.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Improve error message.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix coverity bug 170.
	* server-src/diskfile.c: Fix coverity bug 147.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (validate_chunksize): Check chunksize is >=
						      2*DISK_BLOCK_KB

2006-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define OFF_T_STRTOL.
	* configure.in: Check for strtol and strtoll.

2006-11-02  Ian Turner <ian@zmanda.com>
	* common-src/amanda.h: Use atol if atoll is missing.

2006-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Better message on invalid size.

2006-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: List bsdudp as a udp transport.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Don't use 0 for NULL.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: Define AMANDATES_FILE
	* client-src/amandates.h: Don't define AMANDATES_FILE

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Rename DUMPTYPE_START_T to DUMPTYPE_STARTTIME.
	* common-src/conffile.h: Rename DUMPTYPE_START_T to DUMPTYPE_STARTTIME.
	* server-src/amadmin.c (disklist_one): Print correct starttime.
	* server-src/diskfile.c: Set start_t to starttime.
	* server-src/diskfile.h (disk_t): Add starttime.
	* common-src/conffile.c (conf_print): Add a parameter if we want
	                                      CONFTYPE_STRING enclosed in ".
	* server-src/planner.c: Use getconf_int to get etimeout value.
	* common-src/conffile.c (CNF_CTIMEOUT, CNF_DTIMEOUT, CNF_ETIMEOUT):